# snapdog-os

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  docker-compose.yml  release-please-config.json
.githooks/: pre-commit  pre-push
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  publish-installer-catalog.yml  release-snapdog-update.yml  release.yml  retention.yml
buildroot/: Config.in  external.desc  external.mk  kernel.fragment
buildroot/configs/: override.conf
buildroot/keys/: rauc-ca.cert.pem  update-signing.pub.pem
buildroot/rauc/: create-bundle.sh  manifest.raucm.in
buildroot/scripts/: apply-config-overrides  patch-buildroot
dev/: Dockerfile  README.md  ccache.conf  docker-compose.yml  qemu-prep.sh
docs/: rauc-plan.md  release-manifest-v2.md  snapdog-update-release-flow.md
scripts/: check-version-pins.sh  generate-update-signing-key.sh  release_manifest.py
scripts/tests/: test_release_manifest.py
snapdog-ctrl/: Cargo.toml  build.rs
snapdog-ctrl/snapdog-ctrl/: CHANGELOG.md
snapdog-ctrl/src/: auth.rs  auto_update.rs  captive_dns.rs  config_txt.rs  main.rs  mdns.rs  mock.rs  mpris_client.rs  network.rs  rauc.rs  routes.rs  schedule.rs  server_config.rs  settings.rs  system.rs  update.rs  ws.rs
snapdog-update/: Cargo.toml  README.md  build.rs
snapdog-update/snapdog-update/: CHANGELOG.md
snapdog-update/src/: client.rs  error.rs  lib.rs  main.rs  output.rs  progress.rs  update.rs
snapdog-update/tests/: upgrade_tests.rs
tools/: r2_maintenance.py
(+102 files in other folders)
