[package]
name = "snapdog-update"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/snapdog-os"
authors = ["Fabian Schmieder"]
description = "Firmware update tool for SnapDog OS"

[dependencies]
# CLI Parsing
clap = { version = "4", features = ["derive", "env"] }

# HTTP Client
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI & Progress Bars
indicatif = { version = "0.18", features = ["tokio"] }

# Secure interactive password input
rpassword = "7.3"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Utilities
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
# For testing the update flow under simulated API endpoints
wiremock = "0.6"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
